# crashcart

./: .gitignore  LICENSE  README.md  keyutil.py  pyproject.toml  run.py
crashcart/: __init__.py  keymap.py
crashcart/keyboard/: _nixcommon.py
crashcart/keymap/: linux.py  win.py  x11.py
keyboard_emulator/: keyboard_emulator.ino
pkg/: PKGBUILD
pkg/misc/: crashcart.desktop
