[project]
name = "crashcart"
version = "0.2.0"
description = "Use a laptop as a keyboard and monitor for another computer"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "opencv-python",
    "Pillow",
    "pyserial",
]

[project.gui-scripts]
crashcart = "crashcart:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["crashcart", "crashcart.keymap"]
